--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div style="margin-left: 120px; margin-top: 80px; font-size: 20px">
       <div style="display: flex">
         <div style="line-height: 0.3">
-          <h3 id="Arfin" style="font-weight: bolder; font-size: 70px">
+          <h2 id="Arfin" style="font-weight: bolder">
             Md. Shahidul Islam Sarkar
-          </h3>
+          </h2>
           <h3>Email: shahidulislamopu203@gmail.com</h3>
           <h3>Phone: 01999230181</h3>
           <h3>Gazipur, Dhaka</h3>
